agent: standalone vanilla mode verified end-to-end (roadmap M7 gap closed)
- HostLink + ChildFirstLoader: game loader sees agent classes via
  addURL (--add-opens java.base/java.net); default-package
  ServerApiVanilla is defined child-first to dodge the Mojang signer
  check on the server jar's default package
- game-free host core + ServerApi adapter split (Fabric=yarn,
  Vanilla=obfuscated 1.20.1 names, javap-verified)
- compileVanillaMixin: drop loom's yarn minecraft.jar from the vanilla
  classpath — it shadowed the ASM-generated MinecraftServer stub
- e2e: mixin applied -> Morrow ready. 3 mod(s). -> tick events flow ->
  clean server_stop on SIGTERM